// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c5 {
  box-sizing: border-box;
  width: 40%;
}

.c7 {
  box-sizing: border-box;
  margin-left: 32px;
  width: 60%;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 40px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 24px;
  margin-bottom: 24px;
  padding: 32px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: block;
  outline: none;
  width: 100%;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c3 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 24px;
  margin-bottom: 24px;
  padding: 32px;
  background-color: #222C59;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
    >
      <div
        class="c5"
        width="0.4"
      >
        <img
          class="c6"
          width="100%"
        />
      </div>
      <div
        class="c7"
        width="0.6"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            Secure Your First Application
          </div>
          <div
            class="c10"
          >
            Teleport Application Access provides secure access to internal applications without the need for a VPN, but with the full control and audibility of Teleport.
          </div>
        </div>
        <a
          class="c11"
          href="https://gravitational.com/teleport/docs/"
          kind="primary"
          target="_blank"
          width="240px"
        >
          View Quickstart Guide
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: auto;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #2C3A73;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 16px;
  height: 70px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c6 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.87);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  box-sizing: border-box;
  margin-right: 32px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 32px;
  padding-bottom: 32px;
  width: 240px;
  background-color: #222C59;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  cursor: pointer;
  transition: box-shadow 0.1s;
}

.c5:hover {
  box-shadow: 0 8px 32px rgba(0,0,0,0.5);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <a
        class="c3"
        href="https://gravitational.com/teleport/docs/"
        kind="secondary"
        target="_blank"
        width="240px"
      >
        View Documentation
      </a>
    </div>
    <div
      class="c4"
    >
      <a
        class="c5"
        href=""
        target="_blank"
        width="240px"
      >
        <div
          class="c6"
          color="text.primary"
        >
          <img
            class="c7"
            height="70px"
            src="file_stub"
          />
          <div
            class="c8"
            style="text-transform: capitalize;"
          >
            jenkins
          </div>
          <div
            class="c9"
          >
            Cluster: 
            root-cluster-name
          </div>
        </div>
      </a>
      <a
        class="c5"
        href=""
        target="_blank"
        width="240px"
      >
        <div
          class="c6"
          color="text.primary"
        >
          <img
            class="c7"
            height="70px"
            src="file_stub"
          />
          <div
            class="c8"
            style="text-transform: capitalize;"
          >
            github
          </div>
          <div
            class="c9"
          >
            Cluster: 
            leaf-cluster-name
          </div>
        </div>
      </a>
      <a
        class="c5"
        href=""
        target="_blank"
        width="240px"
      >
        <div
          class="c6"
          color="text.primary"
        >
          <img
            class="c7"
            height="70px"
            src="file_stub"
          />
          <div
            class="c8"
            style="text-transform: capitalize;"
          >
            slack
          </div>
          <div
            class="c9"
          >
            Cluster: 
            leaf2-cluster-longNameFormat-reallyLong
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
